# innowise_laboratory

lecture_1/: main.py  pyproject.toml
lecture_2/: main.py  pyproject.toml
lecture_3/: main.py  pyproject.toml
lecture_4/: main.py  pyproject.toml  school.db  scripts.sql
lecture_5/: pyproject.toml
lecture_5/book_api/: books.db  database.py  main.py  models.py  schemas.py
